[package]
name = "vmcircbuffer"
version = "0.0.1"
authors = ["Bastian Bloessl <mail@bastibl.net>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/vmcircbuffer/"
readme = "README.md"
description = "Doubly Mapped Circular Buffer"
keywords = ["sdr", "dsp", "real-time", "async"]
categories = ["asynchronous", "concurrency", "hardware-support", "science"]

[features]
default = ["async"]
async = ["futures"]

[dependencies]
futures = { version = "0.3.17", optional = true }
slab = "0.4.4"
thiserror = "1.0.29"

[target.'cfg(unix)'.dependencies]
libc = "0.2.99"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi", "winbase", "handleapi", "memoryapi"] }

[dev-dependencies]
rand = "0.8.4"
smol = "1.2.5"