[package]
name = "vmcircbuffer"
version = "0.0.11"
authors = ["Bastian Bloessl <mail@bastibl.net>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/vmcircbuffer/"
readme = "README.md"
description = "Double Mapped Circular Buffer"
keywords = ["sdr", "dsp", "real-time", "async"]
categories = ["asynchronous", "concurrency", "hardware-support", "science"]

[features]
default = ["async", "sync", "nonblocking", "generic"]
async = ["futures", "generic"]
sync = ["generic"]
nonblocking = ["generic"]
generic = []

[[example]]
name = "sdr"
required-features = ["sync"]

[[test]]
name = "async"
required-features = ["async"]

[[test]]
name = "sync"
required-features = ["sync"]

[[test]]
name = "nonblocking"
required-features = ["nonblocking"]

[dependencies]
futures = { version = "0.3.21", optional = true }
once_cell = "1.12"
slab = "0.4.6"
spin = "0.10"
thiserror = "2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.126"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi", "winbase", "handleapi", "memoryapi"] }

[dev-dependencies]
rand = "0.8.5"
smol = "1.2.5"

