[package]
name = "vmcircbuffer"
version = "0.0.12"
authors = ["Bastian Bloessl <mail@bastibl.net>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/vmcircbuffer/"
readme = "README.md"
description = "Double Mapped Circular Buffer"
keywords = ["sdr", "dsp", "real-time", "async"]
categories = ["asynchronous", "concurrency", "hardware-support", "science"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
async = ["futures", "generic"]
sync = ["generic"]
nonblocking = ["generic"]
generic = []
lockfree = []

[[example]]
name = "sdr"
required-features = ["sync"]

[[example]]
name = "tags"
required-features = ["generic"]

[[test]]
name = "async"
required-features = ["async"]

[[test]]
name = "sync"
required-features = ["sync"]

[[test]]
name = "nonblocking"
required-features = ["nonblocking"]

[[test]]
name = "lockfree"
required-features = ["lockfree"]

[[test]]
name = "tags"
required-features = ["generic"]

[dependencies]
futures = { version = "0.3", optional = true }
once_cell = "1.21"
slab = "0.4"
spin = "0.10"
thiserror = "2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi", "winbase", "handleapi", "memoryapi"] }

[dev-dependencies]
rand = "0.10"
smol = "2.0"
