[package]
name = "double-mapped-circular-buffer"
version = "0.1.0"
edition = "2021"

[features]
default = ["async"]
async = ["futures"]

[dependencies]
double-mapped-buffer = { path = "../double-mapped-buffer" }
slab = "0.4.4"
thiserror = "1.0.29"
futures = { version = "0.3.17", optional = true }

[dev-dependencies]
rand = "0.8.4"
